<resources>
    <string name="app_name">Farm connect</string>
    <string name="otpmsg">We will send you an OTP on this given mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="otp_verification">OTP verification</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="please_enter_the_otp">Please Enter the OTP</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">user@gmail.com</string>
    <string name="title_activity_user">User</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="policies">
        <item name="policy1">राष्ट्रीय-कृषि-बीमा-योजना</item>

        <item name="policy2">प्रधानमंत्री कृषि सिंचाई योजना </item>

        <item name="policy3">मिनी कामधेनू डेयरी योजना</item>

        <item name="policy4">जैविक खेती के लिए सब्सिडी/आर्थिक सहायता</item>

        <item name="policy5">किसान क्रेडिट कार्ड</item>

        <item name="policy6">राष्ट्रीय खाद्य सुरक्षा मिशन</item>

        <item name="policy7">फसल बीमा का क्लेम के नियम</item>

        <item name="policy8">किसानों को 7% ब्याज पर मिलेगा 3 लाख का लोन</item>


    </string-array>
    <string-array name="policies_link">

        <item name="link1">http://kisanhelp.in/government-policies/%E0%A4%B0%E0%A4%BE%E0%A4%B7%E0%A5%8D%E0%A4%9F%E0%A5%8D%E0%A4%B0%E0%A5%80%E0%A4%AF-%E0%A4%95%E0%A5%83%E0%A4%B7%E0%A4%BF-%E0%A4%AC%E0%A5%80%E0%A4%AE%E0%A4%BE-%E0%A4%AF%E0%A5%8B%E0%A4%9C%E0%A4%A8%E0%A4%BE</item>

        <item name="link2">http://kisanhelp.in/government-policies/%E0%A4%AA%E0%A5%8D%E0%A4%B0%E0%A4%A7%E0%A4%BE%E0%A4%A8%E0%A4%AE%E0%A4%82%E0%A4%A4%E0%A5%8D%E0%A4%B0%E0%A5%80-%E0%A4%95%E0%A5%83%E0%A4%B7%E0%A4%BF-%E0%A4%B8%E0%A4%BF%E0%A4%82%E0%A4%9A%E0%A4%BE%E0%A4%88-%E0%A4%AF%E0%A5%8B%E0%A4%9C%E0%A4%A8%E0%A4%BE</item>
        //

        <item name="link3">http://www.animalhusb.upsdc.gov.in/hi/mainai-kaamadhaenau-daeyarai-yaojanaa</item>

        <item name="link4">http://kisanhelp.in/government-policies/%E0%A4%9C%E0%A5%88%E0%A4%B5%E0%A4%BF%E0%A4%95-%E0%A4%96%E0%A5%87%E0%A4%A4%E0%A5%80-%E0%A4%95%E0%A5%87-%E0%A4%B2%E0%A4%BF%E0%A4%8F-%E0%A4%B8%E0%A4%AC%E0%A5%8D%E0%A4%B8%E0%A4%BF%E0%A4%A1%E0%A5%80%E0%A4%86%E0%A4%B0%E0%A5%8D%E0%A4%A5%E0%A4%BF%E0%A4%95-%E0%A4%B8%E0%A4%B9%E0%A4%BE%E0%A4%AF%E0%A4%A4%E0%A4%BE</item>
        //

        <item name="link5"> http://kisanhelp.in/government-policies/%E0%A4%95%E0%A4%BF%E0%A4%B8%E0%A4%BE%E0%A4%A8-%E0%A4%95%E0%A5%8D%E0%A4%B0%E0%A5%87%E0%A4%A1%E0%A4%BF%E0%A4%9F-%E0%A4%95%E0%A4%BE%E0%A4%B0%E0%A5%8D%E0%A4%A1</item>

        <item name="link6">http://kisanhelp.in/government-policies/%E0%A4%B0%E0%A4%BE%E0%A4%B7%E0%A5%8D%E0%A4%9F%E0%A5%8D%E0%A4%B0%E0%A5%80%E0%A4%AF-%E0%A4%96%E0%A4%BE%E0%A4%A6%E0%A5%8D%E0%A4%AF-%E0%A4%B8%E0%A5%81%E0%A4%B0%E0%A4%95%E0%A5%8D%E0%A4%B7%E0%A4%BE-%E0%A4%AE%E0%A4%BF%E0%A4%B6%E0%A4%A8</item>
        //

        <item name="link7">http://kisanhelp.in/government-policies/%E0%A4%AB%E0%A4%B8%E0%A4%B2-%E0%A4%AC%E0%A5%80%E0%A4%AE%E0%A4%BE-%E0%A4%95%E0%A4%BE-%E0%A4%95%E0%A5%8D%E0%A4%B2%E0%A5%87%E0%A4%AE-%E0%A4%95%E0%A5%87-%E0%A4%A8%E0%A4%BF%E0%A4%AF%E0%A4%AE</item>
        //

        <item name="link8">http://kisanhelp.in/government-policies/%E0%A4%95%E0%A4%BF%E0%A4%B8%E0%A4%BE%E0%A4%A8%E0%A5%8B%E0%A4%82-%E0%A4%95%E0%A5%8B-7-%E0%A4%AC%E0%A5%8D%E0%A4%AF%E0%A4%BE%E0%A4%9C-%E0%A4%AA%E0%A4%B0-%E0%A4%AE%E0%A4%BF%E0%A4%B2%E0%A5%87%E0%A4%97%E0%A4%BE-3-%E0%A4%B2%E0%A4%BE%E0%A4%96-%E0%A4%95%E0%A4%BE-%E0%A4%B2%E0%A5%8B%E0%A4%A8</item>
        //

    </string-array>
    <string name="policy_card_title_en">Government Schemes</string>
    <string name="policy_card_title_hi"> सरकार की योजनाएं  </string>
    <string-array name="blog">
        <item name="blog1">कम लागत, थोड़ी मेहनत – फायदा जादा</item>
        <item name="blog2">Opening up the Agriculture Sector: A New Approach to Help Our Farmers</item>
    </string-array>
    <string-array name="bloglink">
        <item name="link1">https://www.patilbiotechservices.in/blogs/news/eucalyptushindia</item>
        <item name="link2">https://www.exportersindia.com/blog/opening-up-the-agriculture-sector-a-new-approach-to-help-our-farmers.htm</item>
    </string-array>
    <string name="Mandiprice">Mandi Price</string>
    <string-array name="mandi">
        <item name="m1">Chana</item>
        <item name="m2">Apple</item>
        <item name="m3">Arhar</item>
        <item name="m4">Bajra</item>
        <item name="m5">Banana</item>
        <item name="m6">Beans</item>
        <item name="m7">Chana</item>
        <item name="m8">Chana Dal</item>
        <item name="m9">Garlic</item>
        <item name="m10">Ginger</item>
        <item name="m11">Jowar</item>
        <item name="m12">Maize</item>
        <item name="m13">Mango</item>
        <item name="m14">Moong Dal</item>
        <item name="m15">Mustard</item>
        <item name="m16">Onion</item>
        <item name="m17">Potato</item>
        <item name="m18">Rice</item>
        <item name="m19">Soyabean</item>
        <item name="m20">Tomato</item>
        <item name="m21">Urad Dal</item>
        <item name="m22">Wheat</item>

    </string-array>
    <string-array name="mandilink">
        <item name="link1">https://www.commodityonline.com/mandiprices/chana/all-state/99/101</item>
        <item name="link2">https://www.commodityonline.com/mandiprices/apple/all-state/200/101</item>
        <item name="link3">https://www.commodityonline.com/mandiprices/arhar/all-state/197/101</item>
        <item name="link4">https://www.commodityonline.com/mandiprices/bajra/all-state/122/101</item>
        <item name="link5">https://www.commodityonline.com/mandiprices/banana/all-state/142/101</item>
        <item name="link6">https://www.commodityonline.com/mandiprices/beans/all-state/155/101</item>
        <item name="link7">https://www.commodityonline.com/mandiprices/chana/all-state/99/101</item>
        <item name="link8">https://www.commodityonline.com/mandiprices/chana-dal/all-state/302/101</item>
        <item name="link9">https://www.commodityonline.com/mandiprices/garlic/all-state/161/101</item>
        <item name="link10">https://www.commodityonline.com/mandiprices/ginger/all-state/162/101</item>
        <item name="link11">https://www.commodityonline.com/mandiprices/jowar/all-state/124/101</item>
        <item name="link12">https://www.commodityonline.com/mandiprices/maize/all-state/118/101</item>
        <item name="link13">https://www.commodityonline.com/mandiprices/mango/all-state/148/101</item>
        <item name="link14">https://www.commodityonline.com/mandiprices/moong-dal/all-state/301/101</item>
        <item name="link15">https://www.commodityonline.com/mandiprices/mustard/all-state/108/101</item>
        <item name="link16">https://www.commodityonline.com/mandiprices/onion/all-state/166/101</item>
        <item name="link17">https://www.commodityonline.com/mandiprices/potato/all-state/168/101</item>
        <item name="link18">https://www.commodityonline.com/mandiprices/rice/all-state/119/101</item>
        <item name="link19">https://www.commodityonline.com/mandiprices/soyabean/all-state/106/101</item>
        <item name="link20">https://www.commodityonline.com/mandiprices/tomato/all-state/169/101</item>
        <item name="link21">https://www.commodityonline.com/mandiprices/urad-dal/all-state/304/101</item>
        <item name="link22">https://www.commodityonline.com/mandiprices/wheat/all-state/120/101</item>
    </string-array>
    <string-array name="crops">
        <item name="m1">Chana</item>
        <item name="m2">Apple</item>
        <item name="m3">Arhar</item>
        <item name="m4">Bajra</item>
        <item name="m5">Banana</item>
        <item name="m6">Beans</item>
        <item name="m7">Chana</item>
        <item name="m8">Chana Dal</item>
        <item name="m9">Garlic</item>
        <item name="m10">Ginger</item>
        <item name="m11">Jowar</item>
        <item name="m12">Maize</item>
        <item name="m13">Mango</item>
        <item name="m14">Moong Dal</item>
        <item name="m15">Mustard</item>
        <item name="m16">Onion</item>
        <item name="m17">Potato</item>
        <item name="m18">Rice</item>
        <item name="m19">Soyabean</item>
        <item name="m20">Tomato</item>
        <item name="m21">Urad Dal</item>
        <item name="m22">Wheat</item>
    </string-array>
    <string name="no_tags">no tags</string>
    <string name="empty_edit_text">please fill all the required details</string>
    <string name="answer_hint">Write your answer here</string>
    <string name="post_button">post</string>
    <string name="question_activity_heading">Ask a Question</string>
    <string name="question_activity_post_button">Post</string>
    <string name="title_hint">e.g. How to prevent wheat from insects</string>
    <string name="question_hint">Write your question here...</string>
    <string name="tags_hint">(Optional)enter comma separated tags(any 3)</string>
    <string name="question_heading">Question</string>

</resources>