<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".Discussion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/temporary">

        <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/question_heading"
            android:textColor="@color/teal_200"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/post_it_bro"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/post_button"
            android:layout_gravity="center_vertical|center_horizontal"/>
    </LinearLayout>
    <TextView
        android:id="@+id/posted_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/temporary"
        android:textSize="20sp"
        tools:text="Hello" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/answers_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_below="@id/posted_question"
        android:layout_above="@+id/user_answer"
        android:background="@drawable/edit_text_border"/>

    <MultiAutoCompleteTextView
        android:id="@+id/user_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer_hint"
        android:layout_alignParentBottom="true"  />




</RelativeLayout>