<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_sentotp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/kisan_logo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textSize="20sp"
            android:textColor="@color/colorTextfirst"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/otpmsg"
            android:textColor="@color/colorTextsecond"
            android:textSize="14sp"
            />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="30dp"
               android:layout_marginLeft="30dp"
               android:layout_marginTop="20dp"
               android:layout_marginEnd="30dp"
               android:layout_marginBottom="15dp"
               android:layout_marginRight="30dp"
               android:gravity="center"
               android:text="@string/enter_mobile_number"
               android:textColor="@color/colorTextsecond"
               android:textSize="14sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/backgroundbox"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="+91"
                android:textColor="@color/colorTextfirst"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/input_mob_no"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@null"
                android:hint="9876543210"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/colorTextfirst"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttongetotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Get OTP"
                android:layout_margin="30dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/backgroundbutton"/>
            <ProgressBar
                android:id="@+id/progress_sending_otp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>


    </LinearLayout>


</ScrollView>