<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verifyenterotptwo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/kisan_logo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textSize="25sp"
            android:textColor="@color/colorTextfirst"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/please_enter_the_otp"
            android:textColor="@color/colorTextsecond"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/textmobileshownumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/colorTextfirst"
            android:textSize="14sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:background="@drawable/backgroundbox"
                android:id="@+id/inputotp1"
                android:layout_width="48dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextfirst"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"/>
            <EditText
                android:background="@drawable/backgroundbox"
                android:id="@+id/inputotp2"
                android:layout_width="48dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextfirst"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"/>
            <EditText
                android:background="@drawable/backgroundbox"
                android:id="@+id/inputotp3"
                android:layout_width="48dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextfirst"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"/>
            <EditText
                android:background="@drawable/backgroundbox"
                android:id="@+id/inputotp4"
                android:layout_width="48dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextfirst"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"/>
            <EditText
                android:background="@drawable/backgroundbox"
                android:id="@+id/inputotp5"
                android:layout_width="48dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextfirst"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"/>
            <EditText
                android:background="@drawable/backgroundbox"
                android:id="@+id/inputotp6"
                android:layout_width="48dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextfirst"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Didn\'t recieve the otp"
                android:textColor="@color/colorTextsecond"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/textresendotp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="RESEND OTP AGAIN"
                android:layout_marginLeft="8dp"
                android:textColor="@color/colorTextfirst"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttongetotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/backgroundbutton"
                android:text="Submit"
                android:layout_margin="30dp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <ProgressBar
                android:id="@+id/progress_verify_otp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>


        </FrameLayout>

    </LinearLayout>

</ScrollView>